chore: update project metadata and package config